--- a/client/src/pages/home page/home.css
+++ b/client/src/pages/home page/home.css
@@ -20,7 +20,13 @@ html{
     background-color: transparent;
     color: white;
 }
+.container-gold-card {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
 #goldCard{
+    margin: 30px;
     animation: BackgroundAnimated 10s linear infinite;
     width: 25rem;
     height: 17rem;
@@ -37,12 +43,12 @@ html{
 
 }
 
-.btn-primary{
+.card-btn{
     background-color:#102846;
-    border-color:#a89344;
+    border-color: white;
     color: #a89344;
 }
-.btn-primary:hover{
+.card-btn:hover{
     background-color:#a89344;
     border-color: #102846;
     color: #102846;
